# dinosaur_clone

./: CMakeLists.txt  LICENSE  README.md
engine/collision/: collision_data.hpp  collision_manager.cpp  collision_manager.hpp
engine/gui/: gui_manager.cpp  gui_manager.hpp
engine/math/: transform.cpp  transform.hpp
engine/renderer/: mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
engine/tool/: resource_manager.cpp  resource_manager.hpp
resources/collision_point/module/entity/: sprite.collision
resources/collision_point/module/scene/: ground.collision
resources/config/engine/: data_settings.ini  data_window.ini  path_gui.ini
resources/config/module/core/: data_game.ini  data_main.ini  path_game.ini  path_main.ini
resources/config/module/entity/: data_dinosaur.ini  data_obstacle.ini  data_obstacle_styles.list  path_dinosaur.ini  path_dinosaur_textures.list  path_obstacle.ini  path_obstacle_textures.list
resources/config/module/scene/: data_ground.ini  path_ground.ini
resources/mesh/entity/: sprite.idx  sprite.ver
resources/mesh/scene/: ground.ver
resources/shaders/: sprite.frag  sprite.vert
source/core/: game.cpp  game.hpp  main.cpp
source/module/entity/: dinosaur.cpp  dinosaur.hpp  obstacle.cpp  obstacle.hpp
source/module/gui/: debug_console.cpp  debug_console.hpp  menu.cpp  menu.hpp
source/module/input/: input_dinosaur.hpp  input_handler.cpp  input_handler.hpp
source/module/scene/: camera.cpp  camera.hpp  ground.cpp  ground.hpp
